# TaaSLMM

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
E:antigravitymcp-frameworkdelete_itScriptsactivate/: pyproject.toml
E:antigravitymcp-frameworkdelete_itScriptsactivate/mcp_framework/: __init__.py
E:antigravitymcp-frameworkdelete_itScriptsactivate/mcp_framework/agent/: __init__.py  agent_manager.py  base_agent.py  task_planning_agent.py
E:antigravitymcp-frameworkdelete_itScriptsactivate/mcp_framework/client/: __init__.py
E:antigravitymcp-frameworkdelete_itScriptsactivate/mcp_framework/server/: debug_manager.py
E:antigravitymcp-frameworkdelete_itScriptsactivate/mcp_framework/storage/: models.py
E:antigravitymcp-frameworkdelete_itScriptsactivate/mcp_framework/tools/utility/: load_tools.py
E:antigravitymcp-frameworkdelete_itScriptsactivate/mcp_framework/ui/: __init__.py
docs/: DEVELOPER_GUIDE.md  ENHANCED_DESIGN.md  MCP_TOOLS.md  QUICK_START.md
examples/: llm_agent_demo.py  pipeline_demo.py  simple_task.py  test_combined_schema.py
llm_agent/: __init__.py  agent.py
mcp-framework/examples/: agent_demo.py
mcp-framework/mcp_framework/agent/: anthropic_agent.py  openai_agent.py
mcp-framework/mcp_framework/client/: mcp_client.py
mcp-framework/mcp_framework/server/: __init__.py  mcp_gateway.py  workflow_executor.py
mcp-framework/mcp_framework/storage/: database.py
mcp-framework/mcp_framework/tools/: __init__.py
mcp-framework/mcp_framework/ui/: web_ui.py
mcp_framework/: .gitignore  README.md  pyproject.toml
mcp_framework/docs/: QUICK_START.md
mcp_framework/examples/: client_demo.py  debug_demo.py  workflow_demo.py
mcp_framework/mcp_framework/: config.py
mcp_framework/mcp_framework/client/: mcp_inspector.py
mcp_framework/mcp_framework/server/: __init__.py  tool_registry.py
mcp_framework/mcp_framework/storage/: __init__.py
mcp_framework/mcp_framework/tools/: base.py
mcp_framework/mcp_framework/tools/utility/: __init__.py
mcp_framework/mcp_framework/user_side/: __init__.py  session_manager.py
mcp_framework/tests/: test_mcp_gateway.py
protos/: taas.proto
taas_client/: __init__.py  client.py
taas_server/: __init__.py  server.py
taas_server/core/: __init__.py  state_manager.py
taas_server/db/: __init__.py  database.py  models.py
taas_server/services/: __init__.py  task_service.py
taas_server/tasks/: __init__.py  base_task.py  pipeline_executor.py  pipeline_graph.py  task_registry.py
taas_server/tasks/examples/: __init__.py  config_tasks.py  macrotask_tasks.py  microservice_tasks.py
taas_server/tools/: __init__.py  admin_services.py  macro_services.py  mcp_server.py  micro_services.py  pipeline_services.py
