[project]
name = "mcp-framework"
version = "0.1.0"
description = "ML Task Orchestration Framework using Model Context Protocol"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # MCP Protocol
    "mcp>=1.0.0",
    
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "sse-starlette>=1.8.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",  # PostgreSQL driver
    
    # Storage
    "boto3>=1.34.0",  # S3 support
    
    # Docker integration
    "docker>=7.0.0",
    
    # LLM providers
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    
    # Vector DB for RAG
    "chromadb>=0.4.22",
    
    # Utilities
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0.1",
    "jsonschema>=4.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
mcp-server = "mcp_framework.server.mcp_gateway:main"
mcp-agent = "mcp_framework.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_framework"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
